import React from 'react';
import { shallow } from 'enzyme';
import Card from '../Card';
import Modal from '../../LargeModal/LargeModal';

let wrapper;

describe('Test Role Card component', () => {
  const defaultProps = {
    cardProps: {
      details: {
        id: 1,
        name: 'test role',
        description:
          'test role description should render role card instance properly should render role card instance properly',
        active_engineers_count: 1,
        vacancies_count: 3,
        applications_count: 2,
        created_at: '2019-06-04 04:56:39',
        updated_at: '2019-06-04 04:56:39'
      },
      fetcher: jest.fn(),
      loading: false,
      activeParticipants: {},
      type: 'role'
    },
    focusRole: jest.fn()
  };

  it('should render correctly', () => {
    wrapper = shallow(<Card {...defaultProps} />);
    expect(wrapper).toMatchSnapshot();
  });

  it('should render modal', () => {
    wrapper = shallow(<Card {...{ ...defaultProps, loading: true }} />);
    expect(wrapper).toMatchSnapshot();
  });

  it('should handle click correctly', () => {
    wrapper.find('.role-card__attributes-seemore').simulate('click');
    expect(wrapper.state('showMore')).toBeTruthy();
  });

  it('should handle click count correctly', () => {
    wrapper
      .find('.role-card__attributes-count')
      .at(1)
      .simulate('click');
    expect(wrapper).toMatchSnapshot();
  });

  it('should handle close modal correctly', () => {
    wrapper
      .find(Modal)
      .dive()
      .find('.close')
      .simulate('click');
    expect(wrapper).toMatchSnapshot();
  });

  it('should call focus role when dropdown option is clicked', () => {
    const spy = jest.fn();
    const cardWrapper = shallow(
      <Card {...{ ...defaultProps, focusRole: spy }} />
    );
    cardWrapper.find('.role-card__icon').simulate('click');

    cardWrapper
      .find('.dropdown-item')
      .at(0)
      .simulate('click');

    expect(spy).toHaveBeenCalledTimes(1);
  });
});

describe('Test Certification Card component', () => {
  const props = {
    cardProps: {
      details: {
        id: 1,
        name: 'test role',
        description:
          'test role description should render role card instance properly should render role card instance properly',
        active_engineers_count: 1,
        applications_count: 2,
        certified_engineers: 2,
        created_at: '2019-06-04 04:56:39',
        updated_at: '2019-06-04 04:56:39'
      },
      fetcher: jest.fn(),
      type: 'certificates',
      activeParticipants: {}
    },
    focusRole: jest.fn()
  };

  it('should render correctly', () => {
    wrapper = shallow(<Card {...props} />);
    expect(wrapper).toMatchSnapshot();
  });

  it('should render modal', () => {
    wrapper = shallow(<Card {...{ ...props, loading: true }} />);
    expect(wrapper).toMatchSnapshot();
  });

  it('should handle click correctly', () => {
    wrapper.find('.role-card__attributes-seemore').simulate('click');
    expect(wrapper.state('showMore')).toBeTruthy();
  });

  it('should handle click count correctly', () => {
    wrapper
      .find('.role-card__attributes-count')
      .at(1)
      .simulate('click');
    expect(wrapper).toMatchSnapshot();
  });

  it('should handle close modal correctly', () => {
    wrapper
      .find(Modal)
      .dive()
      .find('.close')
      .simulate('click');
    expect(wrapper).toMatchSnapshot();
  });

  it('should handle click of edit certification button', () => {
    wrapper.find('.dropdown-item').simulate('click');
  });
});
