// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Certification Card component should handle click count correctly 1`] = `
<div
  className="role-card"
>
  <div
    className="role-card__icon"
    data-toggle="dropdown"
  />
  <div
    className="dropdown-menu dropdown-menu-right"
  >
    <button
      className="dropdown-item"
      onClick={[Function]}
      type="button"
    >
      Edit Certification
    </button>
  </div>
  <div
    className="role-card__title"
  >
    test role
  </div>
  <p
    className="role-card__attributes-sm"
  >
    Vacancies
     
    <span
      className="role-card__attributes-count-sm"
    />
  </p>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-6"
    >
      <div
        className="role-card__attributes"
      >
        Applicants 
        <br />
         
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
          >
            2
          </span>
        </div>
      </div>
    </div>
    <div
      className="col-6"
    >
      <p
        className="role-card__attributes"
      >
        Certified Engrs.
         
        <br />
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="-1"
          >
            2
          </span>
        </div>
      </p>
    </div>
  </div>
  <p
    className="role-card__description-title mt-2 mb-1"
  >
    Description
  </p>
  <p
    className="role-card__description"
  >
    test role description should render role card instance properly should render role card instance properly
    <span
      className="role-card__attributes-seemore"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="-1"
    >
      ...
       hide
    </span>
  </p>
  <Modal
    handleClose={[Function]}
    show={true}
    showBtn={true}
    size="large"
    title="2 test role's"
  >
    <div
      className="modal__body-card"
    >
      <MapRoleActiveEngineers
        roleData={Object {}}
      />
    </div>
  </Modal>
  <Connect(withRouter(EditCertificationModal))
    data={
      Object {
        "active_engineers_count": 1,
        "applications_count": 2,
        "certified_engineers": 2,
        "created_at": "2019-06-04 04:56:39",
        "description": "test role description should render role card instance properly should render role card instance properly",
        "id": 1,
        "name": "test role",
        "updated_at": "2019-06-04 04:56:39",
      }
    }
    open={false}
    toggle={[Function]}
  />
</div>
`;

exports[`Test Certification Card component should handle close modal correctly 1`] = `
<div
  className="role-card"
>
  <div
    className="role-card__icon"
    data-toggle="dropdown"
  />
  <div
    className="dropdown-menu dropdown-menu-right"
  >
    <button
      className="dropdown-item"
      onClick={[Function]}
      type="button"
    >
      Edit Certification
    </button>
  </div>
  <div
    className="role-card__title"
  >
    test role
  </div>
  <p
    className="role-card__attributes-sm"
  >
    Vacancies
     
    <span
      className="role-card__attributes-count-sm"
    />
  </p>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-6"
    >
      <div
        className="role-card__attributes"
      >
        Applicants 
        <br />
         
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
          >
            2
          </span>
        </div>
      </div>
    </div>
    <div
      className="col-6"
    >
      <p
        className="role-card__attributes"
      >
        Certified Engrs.
         
        <br />
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="-1"
          >
            2
          </span>
        </div>
      </p>
    </div>
  </div>
  <p
    className="role-card__description-title mt-2 mb-1"
  >
    Description
  </p>
  <p
    className="role-card__description"
  >
    test role description should render role card instance properly should render role card instance properly
    <span
      className="role-card__attributes-seemore"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="-1"
    >
      ...
       hide
    </span>
  </p>
  <Modal
    handleClose={[Function]}
    show={true}
    showBtn={true}
    size="large"
    title="2 test role's"
  >
    <div
      className="modal__body-card"
    >
      <MapRoleActiveEngineers
        roleData={Object {}}
      />
    </div>
  </Modal>
  <Connect(withRouter(EditCertificationModal))
    data={
      Object {
        "active_engineers_count": 1,
        "applications_count": 2,
        "certified_engineers": 2,
        "created_at": "2019-06-04 04:56:39",
        "description": "test role description should render role card instance properly should render role card instance properly",
        "id": 1,
        "name": "test role",
        "updated_at": "2019-06-04 04:56:39",
      }
    }
    open={true}
    toggle={[Function]}
  />
</div>
`;

exports[`Test Certification Card component should render correctly 1`] = `
<div
  className="role-card"
>
  <div
    className="role-card__icon"
    data-toggle="dropdown"
  />
  <div
    className="dropdown-menu dropdown-menu-right"
  >
    <button
      className="dropdown-item"
      onClick={[Function]}
      type="button"
    >
      Edit Certification
    </button>
  </div>
  <div
    className="role-card__title"
  >
    test role
  </div>
  <p
    className="role-card__attributes-sm"
  >
    Vacancies
     
    <span
      className="role-card__attributes-count-sm"
    />
  </p>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-6"
    >
      <div
        className="role-card__attributes"
      >
        Applicants 
        <br />
         
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
          >
            2
          </span>
        </div>
      </div>
    </div>
    <div
      className="col-6"
    >
      <p
        className="role-card__attributes"
      >
        Certified Engrs.
         
        <br />
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="-1"
          >
            2
          </span>
        </div>
      </p>
    </div>
  </div>
  <p
    className="role-card__description-title mt-2 mb-1"
  >
    Description
  </p>
  <p
    className="role-card__description"
  >
    test role description should render role card instance properly should render role card instance properly
    <span
      className="role-card__attributes-seemore"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="-1"
    >
      ...
       see more
    </span>
  </p>
  <Modal
    handleClose={[Function]}
    show={false}
    showBtn={true}
    size="large"
    title="2 test role's"
  >
    <div
      className="modal__body-card"
    >
      <MapRoleActiveEngineers
        roleData={Object {}}
      />
    </div>
  </Modal>
  <Connect(withRouter(EditCertificationModal))
    data={
      Object {
        "active_engineers_count": 1,
        "applications_count": 2,
        "certified_engineers": 2,
        "created_at": "2019-06-04 04:56:39",
        "description": "test role description should render role card instance properly should render role card instance properly",
        "id": 1,
        "name": "test role",
        "updated_at": "2019-06-04 04:56:39",
      }
    }
    open={false}
    toggle={[Function]}
  />
</div>
`;

exports[`Test Certification Card component should render modal 1`] = `
<div
  className="role-card"
>
  <div
    className="role-card__icon"
    data-toggle="dropdown"
  />
  <div
    className="dropdown-menu dropdown-menu-right"
  >
    <button
      className="dropdown-item"
      onClick={[Function]}
      type="button"
    >
      Edit Certification
    </button>
  </div>
  <div
    className="role-card__title"
  >
    test role
  </div>
  <p
    className="role-card__attributes-sm"
  >
    Vacancies
     
    <span
      className="role-card__attributes-count-sm"
    />
  </p>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-6"
    >
      <div
        className="role-card__attributes"
      >
        Applicants 
        <br />
         
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
          >
            2
          </span>
        </div>
      </div>
    </div>
    <div
      className="col-6"
    >
      <p
        className="role-card__attributes"
      >
        Certified Engrs.
         
        <br />
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="-1"
          >
            2
          </span>
        </div>
      </p>
    </div>
  </div>
  <p
    className="role-card__description-title mt-2 mb-1"
  >
    Description
  </p>
  <p
    className="role-card__description"
  >
    test role description should render role card instance properly should render role card instance properly
    <span
      className="role-card__attributes-seemore"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="-1"
    >
      ...
       see more
    </span>
  </p>
  <Modal
    handleClose={[Function]}
    show={false}
    showBtn={true}
    size="large"
    title="2 test role's"
  >
    <div
      className="modal__body-card"
    >
      <MapRoleActiveEngineers
        roleData={Object {}}
      />
    </div>
  </Modal>
  <Connect(withRouter(EditCertificationModal))
    data={
      Object {
        "active_engineers_count": 1,
        "applications_count": 2,
        "certified_engineers": 2,
        "created_at": "2019-06-04 04:56:39",
        "description": "test role description should render role card instance properly should render role card instance properly",
        "id": 1,
        "name": "test role",
        "updated_at": "2019-06-04 04:56:39",
      }
    }
    open={false}
    toggle={[Function]}
  />
</div>
`;

exports[`Test Role Card component should handle click count correctly 1`] = `
<div
  className="role-card"
>
  <div
    className="role-card__icon"
    data-toggle="dropdown"
  />
  <div
    className="dropdown-menu dropdown-menu-right"
  >
    <button
      className="dropdown-item"
      data-target="#editRoleModal"
      data-toggle="modal"
      onClick={[Function]}
      type="button"
    >
      Edit Role
    </button>
    <button
      className="dropdown-item"
      data-target="#delete-role-modal"
      data-toggle="modal"
      disabled={1}
      onClick={[Function]}
      type="button"
    >
      Delete Role
    </button>
  </div>
  <div
    className="role-card__title"
  >
    test role
  </div>
  <p
    className="role-card__attributes-sm"
  >
    Vacancies
     
    <span
      className="role-card__attributes-count-sm"
    >
      3
    </span>
  </p>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-6"
    >
      <div
        className="role-card__attributes"
      >
        Applicants 
        <br />
         
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
          >
            2
          </span>
        </div>
      </div>
    </div>
    <div
      className="col-6"
    >
      <p
        className="role-card__attributes"
      >
        Active Engrs.
         
        <br />
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="-1"
          >
            1
          </span>
        </div>
      </p>
    </div>
  </div>
  <p
    className="role-card__description-title mt-2 mb-1"
  >
    Description
  </p>
  <p
    className="role-card__description"
  >
    test role description should render role card instance properly should render role card instance properly
    <span
      className="role-card__attributes-seemore"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="-1"
    >
      ...
       hide
    </span>
  </p>
  <Modal
    handleClose={[Function]}
    show={true}
    showBtn={true}
    size="large"
    title="1 test role"
  >
    <div
      className="modal__body-card"
    >
      <MapRoleActiveEngineers
        roleData={Object {}}
      />
    </div>
  </Modal>
  <Connect(withRouter(EditCertificationModal))
    data={
      Object {
        "active_engineers_count": 1,
        "applications_count": 2,
        "created_at": "2019-06-04 04:56:39",
        "description": "test role description should render role card instance properly should render role card instance properly",
        "id": 1,
        "name": "test role",
        "updated_at": "2019-06-04 04:56:39",
        "vacancies_count": 3,
      }
    }
    open={false}
    toggle={[Function]}
  />
</div>
`;

exports[`Test Role Card component should handle close modal correctly 1`] = `
<div
  className="role-card"
>
  <div
    className="role-card__icon"
    data-toggle="dropdown"
  />
  <div
    className="dropdown-menu dropdown-menu-right"
  >
    <button
      className="dropdown-item"
      data-target="#editRoleModal"
      data-toggle="modal"
      onClick={[Function]}
      type="button"
    >
      Edit Role
    </button>
    <button
      className="dropdown-item"
      data-target="#delete-role-modal"
      data-toggle="modal"
      disabled={1}
      onClick={[Function]}
      type="button"
    >
      Delete Role
    </button>
  </div>
  <div
    className="role-card__title"
  >
    test role
  </div>
  <p
    className="role-card__attributes-sm"
  >
    Vacancies
     
    <span
      className="role-card__attributes-count-sm"
    >
      3
    </span>
  </p>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-6"
    >
      <div
        className="role-card__attributes"
      >
        Applicants 
        <br />
         
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
          >
            2
          </span>
        </div>
      </div>
    </div>
    <div
      className="col-6"
    >
      <p
        className="role-card__attributes"
      >
        Active Engrs.
         
        <br />
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="-1"
          >
            1
          </span>
        </div>
      </p>
    </div>
  </div>
  <p
    className="role-card__description-title mt-2 mb-1"
  >
    Description
  </p>
  <p
    className="role-card__description"
  >
    test role description should render role card instance properly should render role card instance properly
    <span
      className="role-card__attributes-seemore"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="-1"
    >
      ...
       hide
    </span>
  </p>
  <Modal
    handleClose={[Function]}
    show={false}
    showBtn={true}
    size="large"
    title="1 test role"
  >
    <div
      className="modal__body-card"
    >
      <MapRoleActiveEngineers
        roleData={Object {}}
      />
    </div>
  </Modal>
  <Connect(withRouter(EditCertificationModal))
    data={
      Object {
        "active_engineers_count": 1,
        "applications_count": 2,
        "created_at": "2019-06-04 04:56:39",
        "description": "test role description should render role card instance properly should render role card instance properly",
        "id": 1,
        "name": "test role",
        "updated_at": "2019-06-04 04:56:39",
        "vacancies_count": 3,
      }
    }
    open={false}
    toggle={[Function]}
  />
</div>
`;

exports[`Test Role Card component should render correctly 1`] = `
<div
  className="role-card"
>
  <div
    className="role-card__icon"
    data-toggle="dropdown"
  />
  <div
    className="dropdown-menu dropdown-menu-right"
  >
    <button
      className="dropdown-item"
      data-target="#editRoleModal"
      data-toggle="modal"
      onClick={[Function]}
      type="button"
    >
      Edit Role
    </button>
    <button
      className="dropdown-item"
      data-target="#delete-role-modal"
      data-toggle="modal"
      disabled={1}
      onClick={[Function]}
      type="button"
    >
      Delete Role
    </button>
  </div>
  <div
    className="role-card__title"
  >
    test role
  </div>
  <p
    className="role-card__attributes-sm"
  >
    Vacancies
     
    <span
      className="role-card__attributes-count-sm"
    >
      3
    </span>
  </p>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-6"
    >
      <div
        className="role-card__attributes"
      >
        Applicants 
        <br />
         
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
          >
            2
          </span>
        </div>
      </div>
    </div>
    <div
      className="col-6"
    >
      <p
        className="role-card__attributes"
      >
        Active Engrs.
         
        <br />
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="-1"
          >
            1
          </span>
        </div>
      </p>
    </div>
  </div>
  <p
    className="role-card__description-title mt-2 mb-1"
  >
    Description
  </p>
  <p
    className="role-card__description"
  >
    test role description should render role card instance properly should render role card instance properly
    <span
      className="role-card__attributes-seemore"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="-1"
    >
      ...
       see more
    </span>
  </p>
  <Modal
    handleClose={[Function]}
    show={false}
    showBtn={true}
    size="large"
    title="1 test role"
  >
    <div
      className="modal__body-card"
    >
      <MapRoleActiveEngineers
        roleData={Object {}}
      />
    </div>
  </Modal>
  <Connect(withRouter(EditCertificationModal))
    data={
      Object {
        "active_engineers_count": 1,
        "applications_count": 2,
        "created_at": "2019-06-04 04:56:39",
        "description": "test role description should render role card instance properly should render role card instance properly",
        "id": 1,
        "name": "test role",
        "updated_at": "2019-06-04 04:56:39",
        "vacancies_count": 3,
      }
    }
    open={false}
    toggle={[Function]}
  />
</div>
`;

exports[`Test Role Card component should render modal 1`] = `
<div
  className="role-card"
>
  <div
    className="role-card__icon"
    data-toggle="dropdown"
  />
  <div
    className="dropdown-menu dropdown-menu-right"
  >
    <button
      className="dropdown-item"
      data-target="#editRoleModal"
      data-toggle="modal"
      onClick={[Function]}
      type="button"
    >
      Edit Role
    </button>
    <button
      className="dropdown-item"
      data-target="#delete-role-modal"
      data-toggle="modal"
      disabled={1}
      onClick={[Function]}
      type="button"
    >
      Delete Role
    </button>
  </div>
  <div
    className="role-card__title"
  >
    test role
  </div>
  <p
    className="role-card__attributes-sm"
  >
    Vacancies
     
    <span
      className="role-card__attributes-count-sm"
    >
      3
    </span>
  </p>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-6"
    >
      <div
        className="role-card__attributes"
      >
        Applicants 
        <br />
         
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
          >
            2
          </span>
        </div>
      </div>
    </div>
    <div
      className="col-6"
    >
      <p
        className="role-card__attributes"
      >
        Active Engrs.
         
        <br />
        <div
          className="text-left"
        >
          <span
            className="role-card__attributes-count"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="-1"
          >
            1
          </span>
        </div>
      </p>
    </div>
  </div>
  <p
    className="role-card__description-title mt-2 mb-1"
  >
    Description
  </p>
  <p
    className="role-card__description"
  >
    test role description should render role card instance properly should render role card instance properly
    <span
      className="role-card__attributes-seemore"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="-1"
    >
      ...
       see more
    </span>
  </p>
  <Modal
    handleClose={[Function]}
    show={false}
    showBtn={true}
    size="large"
    title="1 test role"
  >
    <div
      className="modal__body-card"
    >
      <MapRoleActiveEngineers
        roleData={Object {}}
      />
    </div>
  </Modal>
  <Connect(withRouter(EditCertificationModal))
    data={
      Object {
        "active_engineers_count": 1,
        "applications_count": 2,
        "created_at": "2019-06-04 04:56:39",
        "description": "test role description should render role card instance properly should render role card instance properly",
        "id": 1,
        "name": "test role",
        "updated_at": "2019-06-04 04:56:39",
        "vacancies_count": 3,
      }
    }
    open={false}
    toggle={[Function]}
  />
</div>
`;
